# rust-api-try

./: Cargo.toml  Taskfile.yml
account/apps/api/: Cargo.toml
account/apps/api/src/: main.rs  state.rs
account/apps/api/src/handlers/: api_error.rs  mod.rs  request_validator.rs  user_handler.rs
account/apps/api/src/handlers/user/: mod.rs  user_response.rs
account/apps/api/src/handlers/user/get/: handler.rs
account/apps/api/src/handlers/user/register/: handler.rs  mod.rs  request.rs  response.rs
account/apps/api/src/usecase/: create_user_usecase.rs  get_user_usecase.rs  mod.rs  register_user_usecase.rs
account/domain/: Cargo.toml
account/domain/src/user/: domain_error.rs  email.rs  entity.rs  id.rs  mod.rs  name.rs  repository.rs  role.rs  status.rs  user.rs  user_repository.rs
account/infra/: Cargo.toml
account/infra-orm/: Cargo.toml
account/infra-orm/src/orm/: users.rs
account/infra/src/user/: in_memory_user_repository.rs  mod.rs  postgres_repository.rs  postgres_user_repository.rs
account/libs/: Cargo.toml
account/libs/src/: usecase.rs
account/libs/src/error/: app_error.rs
account/migration/: Cargo.toml  generate-orm.sh  migrate.sh
account/migration/src/: lib.rs  m20251230_093735_create_users_table.rs
docker/: docker-compose.yml
docker/init-db/: 01-create-databases.sql
http-clients/: test.http
src/: main.rs
src/api/: mod.rs  state.rs  user_handler.rs
src/domain/: mod.rs  user_repository.rs
src/infra/: user_repository.rs
src/usecase/: get_user_usecase.rs  mod.rs
