[workspace]
members = [
    "account/domain",
    "account/migration",
    "account/infra",
    "account/apps/api",
    "account/libs",
    "account/infra-orm"
]
resolver = "2"

[workspace.dependencies]
# プロダクトクレート
account-domain = { path = "account/domain" }
account-infra = { path = "account/infra" }
account-infra-orm = { path = "account/infra-orm" }
account-libs = { path = "account/libs" }

# 依存
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"