[package]
name = "account-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
account-domain = { path = "../domain" }
account-infra-orm = { path = "../infra-orm" }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.48", features = ["full"] }