[package]
name = "account-api"
version = "0.1.0"
edition = "2024"

[dependencies]
account-domain = { path = "../../domain" }
account-infra = { path = "../../infra" }
account-libs = { path = "../../libs" }

axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sea-orm = "1.1"