[package]
name = "account-api"
version = "0.1.0"
edition = "2024"

[dependencies]
account-domain = { workspace = true }
account-infra = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }